--- a/style.css
+++ b/style.css
@@ -115,13 +115,14 @@ header > div {
 
 
 /* Mobile Navigation */
-/*
+
 ul {
   list-style: none;
   height: 100%;
   display: flex;
   align-items: center;
   justify-content: space-around;
+	z-index: 3;
 }
 
 ul a {
@@ -154,7 +155,7 @@ ul li {
 	padding: 0;
 	margin-top: 4.8rem;
 	width: 100%;
-	height: 50vh;
+	height: 45vh;
 }
 
 .mobile-menu li {
@@ -211,7 +212,6 @@ footer a { margin-left:15px; }
 }
 
 .main-heading { font-weight:bold; font-size:80px; }
-.main-subheading { font-size:25px; }
 .text-content { margin:0 25px; font-size:25px; font-family: 'Roboto Mono', monospace;}
 
 
@@ -426,11 +426,114 @@ border-radius:30px;
   letter-spacing: 1px;
 }
 
+.container .text{
+	display: none;
+	margin-top: 20px;
+}
+
+.container .text.textEN{
+	display: flex;
+}
+
+.check{
+	position: relative;
+	width: 30px;
+	cursor: pointer;
+}
+
+.check::before{
+	position: absolute;
+	content: '';
+	width: 25px;
+	height: 15px;
+	background: #333;
+	border-radius: 25px;
+}
+
+.check:checked::before{
+	background: #e0dd1b;
+}
+
+.check::after{
+	content: '';
+	position: absolute;
+	left: 0px;
+	width: 15px;
+	height: 15px;
+	background: #fff;
+	border-radius: 25px;
+	transition: 0.25s;
+	border: 2px solid #333;
+	box-sizing: border-box;
+}
+
+.check:checked::after{
+	left: 12px;
+	border: 2px solid #e0dd1b;
+}
+
+.check:checked ~ .text.textEN{
+	display: none;
+}
+
+.check:checked ~ .text.textGR{
+	display: flex;
+}
 
 
-@media only screen and (max-width: 660px){
+
+
+
+/* Media queries */
+
+@media only screen and (max-width: 630px){
+	header .branding{ text-align: left; width: 100%; }
+	header nav{ display: none; }
+
+	.main-heading{ font-size: 3rem;}
+	.text-content{ font-size: 1.4rem; }
+
+	.row{ display: grid; }
+	.col-3 { font-size: 20px; width: 100%; text-align: center; }
+
+	#hamburger-icon { display: block; }
+
+	.pin{
+		font-size: 1.5rem;
+	}
+
+	/* About me */
+	.about-me-pic{ width: 100%; }
+	.check:checked ~ .text.textGR{ display: block; }
+	.container .text.textEN{ display: block; }
+
+	/* Wedding */
+	.remove{ display: none; }
+	.wedding-img{ width: 100%;}
+
+	/* Bachelor */
+	.ring-pic{ width: 100%; }
+
+	/* Contacts */
+	.contacts-img{ width: 100%; }
+	.info { width: 14rem; }
+}
+
+/* Tablets */
+
+@media only screen and (max-width:950px){
 	header .branding{ text-align: left; width: 100%; }
 	header nav{ display: none; }
 
 	#hamburger-icon { display: block; }
+
+	.row{ display: grid; }
+	.col-3{ font-size: 20px; width: 100%; text-align: center;  }
+	.remove{ display: none; }
+}
+
+/* For galaxy fold phones */
+@media only screen and (max-width:325px){
+	.info { width: 11rem; }
+	.remove{ display: none; }
 }
