--- a/style.css
+++ b/style.css
@@ -71,6 +71,7 @@ header > div {
 	display: inline-block;
 	border-radius: 50px;
 	padding: 1rem;
+	margin-left: 0.6rem;
 }
 
 /* Style the dropdown toggle button */
@@ -113,54 +114,54 @@ header > div {
 	padding: 0.5rem 1.4rem 0.5rem 1rem;
 }
 
-
 /* Mobile Navigation */
 
 ul {
   list-style: none;
   height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
 	z-index: 3;
 }
 
 ul a {
-  color: black;
+  color: #f2f2f2;
+	/*background-color: #04AA6D;*/
 	font-size: 32px;
-	background-color: #66f578;
 	padding: 5px;
-	border-radius: 10px;
-}
-
-ul li {
-  padding-bottom: 10px;
 }
 
 .mobile-menu {
   display: none;
-  position:fixed;
+  position: fixed;
   top: 0;
   left: 0;
   height: 100%;
   width: 100%;
-	backdrop-filter: blur(5px);
+	/*backdrop-filter: blur(5px); */
+	background-color: #333;
 }
 
 .open .mobile-menu {
   display: flex;
   flex-direction: column;
-  align-items:center;
-  justify-content:center;
-	padding: 0;
-	margin-top: 4.8rem;
+	padding:0;
+	margin-top: 6rem;
 	width: 100%;
-	height: 45vh;
+	height: 47vh;
 }
 
-.mobile-menu li {
-  margin-bottom: 10px;
+.mobile-nav a{
+ display: block;
 }
+
+.elem:hover{
+	background-color: #553;
+}
+
+.mobile-menu li{
+	margin: 5px 0 5px 0;
+}
+
+.mobile-nav  .active { background-color: #555;}
 
 #hamburger-icon {
   margin: auto 0;
@@ -498,9 +499,7 @@ border-radius:30px;
 
 	#hamburger-icon { display: block; }
 
-	.pin{
-		font-size: 1.5rem;
-	}
+	.pin{ font-size: 1.5rem; }
 
 	/* About me */
 	.about-me-pic{ width: 100%; }
@@ -535,3 +534,6 @@ border-radius:30px;
 @media only screen and (max-width:325px){
 	.info { width: 11rem; }
 }
+
+
+
